tests/baselines/reference/FunctionExpression1_es6.errors.txt
tests/cases/conformance/es6/functionExpressions/FunctionExpression1_es6.ts(1,18): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/functionExpressions/FunctionExpression1_es6.ts (1 errors) ====
    var v = function * () { }
                     ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.